cabal-version:      3.8
name:               gpipe-playground
version:            0.1.0.0
tested-with:        GHC == 9.8.1
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Anton Gushcha
maintainer:         ncrashed@protonmail.com
extra-source-files: CHANGELOG.md

executable gpipe-triangle
    main-is:          Triangle.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      ScopedTypeVariables
      TypeOperators

executable gpipe-resize
    main-is:          Resize.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      ScopedTypeVariables
      TypeOperators

executable gpipe-uniform
    main-is:          Uniform.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      FlexibleContexts 
      OverloadedRecordDot 
      ScopedTypeVariables
      TypeOperators

executable gpipe-sampling
    main-is:          Sampling.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      OverloadedRecordDot 
      ScopedTypeVariables
      TypeOperators

executable gpipe-offscreen
    main-is:          Offscreen.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      OverloadedRecordDot 
      ScopedTypeVariables
      TypeOperators

executable gpipe-raycast
    main-is:          Raycast.hs
    build-depends:    
          base ^>=4.19
        , exception-transformers
        , GPipe
        , GPipe-GLFW
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      OverloadedRecordDot 
      RecordWildCards
      ScopedTypeVariables
      TypeFamilies
      TypeOperators
      UndecidableInstances
